--- a/index.html
+++ b/index.html
@@ -5,13 +5,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Luxury 4-bedroom villa with pool in Colinas Verdes, Lagos - €1,095,000. Stunning countryside property with mature gardens, sauna, and gym.">
     <title>Luxury Villa for Sale - Colinas Verdes, Lagos | €1,095,000</title>
+    <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css"
+          integrity="sha256-p4NxAoJBhIIN+hmNHrzRCf9tD/miZyoHS5obTRR9BMY="
+          crossorigin=""/>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <!-- Navigation -->
     <nav class="navbar">
         <div class="container">
-            <div class="nav-brand">Colinas Verdes Villa</div>
+            <div class="nav-brand">Colinas Verdes 39</div>
             <ul class="nav-menu">
                 <li><a href="#overview">Overview</a></li>
                 <li><a href="#gallery">Gallery</a></li>
@@ -395,6 +398,10 @@
 
                     <p class="location-description">Lagos is one of the Algarve's most historic and charming cities, renowned for its stunning beaches, vibrant marina, excellent restaurants, and rich cultural heritage. The Colinas Verdes area provides a peaceful retreat while maintaining convenient access to all that Lagos has to offer.</p>
                 </div>
+
+                <div class="location-map">
+                    <div id="propertyMap"></div>
+                </div>
             </div>
         </div>
     </section>
@@ -477,6 +484,9 @@
         </div>
     </footer>
 
+    <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"
+            integrity="sha256-20nQCchB9co0qIjJZRGuk2/Z9VM+kNiyxNV1lvTlZBo="
+            crossorigin=""></script>
     <script src="script.js"></script>
 </body>
 </html>
