Add direct owner sale messaging
Banner Section:
- Prominent gold banner after quick facts section
- "Direct from Owner" badge with user icon
- Four key benefits displayed with checkmarks:
  * No Agent Commission
  * Direct Communication
  * Faster Transaction
  * Full Property Knowledge
- Gradient gold background with navy borders
- Hover effects on benefit items
- Fully responsive design

Contact Section Updates:
- Changed heading to "Speak Directly with the Owner"
- Added owner contact badge at top of contact info
- Updated subtitle for authenticity messaging
- Changed benefits list to "Why Buy Direct?":
  * Save on agent commission fees
  * Get first-hand property knowledge
  * Flexible viewing schedules
  * Direct negotiation & faster decisions
  * Personal insights about the property & area

Design Elements:
- SVG icons for visual consistency
- Brand color integration (gold and navy)
- Smooth transitions and hover states
- Mobile-responsive grid layouts
- Professional trust indicators

This establishes clear FSBO (For Sale By Owner) positioning while maintaining luxury branding

--- a/index.html
+++ b/index.html
@@ -69,6 +69,47 @@
         </div>
     </section>
 
+    <!-- Direct Owner Sale Banner -->
+    <section class="owner-sale-banner">
+        <div class="container">
+            <div class="owner-banner-content">
+                <div class="owner-badge">
+                    <svg class="badge-icon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                        <path d="M20 21v-2a4 4 0 0 0-4-4H8a4 4 0 0 0-4 4v2"></path>
+                        <circle cx="12" cy="7" r="4"></circle>
+                    </svg>
+                    <span class="badge-text">Direct from Owner</span>
+                </div>
+                <div class="owner-benefits">
+                    <div class="benefit-item">
+                        <svg class="benefit-icon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                            <polyline points="20 6 9 17 4 12"></polyline>
+                        </svg>
+                        <span>No Agent Commission</span>
+                    </div>
+                    <div class="benefit-item">
+                        <svg class="benefit-icon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                            <polyline points="20 6 9 17 4 12"></polyline>
+                        </svg>
+                        <span>Direct Communication</span>
+                    </div>
+                    <div class="benefit-item">
+                        <svg class="benefit-icon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                            <polyline points="20 6 9 17 4 12"></polyline>
+                        </svg>
+                        <span>Faster Transaction</span>
+                    </div>
+                    <div class="benefit-item">
+                        <svg class="benefit-icon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                            <polyline points="20 6 9 17 4 12"></polyline>
+                        </svg>
+                        <span>Full Property Knowledge</span>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
     <!-- Overview Section -->
     <section id="overview" class="overview">
         <div class="container">
@@ -410,13 +451,21 @@
     <section id="contact" class="contact">
         <div class="container">
             <div class="section-header">
-                <h2>Schedule Your Private Viewing</h2>
+                <h2>Speak Directly with the Owner</h2>
                 <div class="divider"></div>
-                <p class="section-subtitle">Contact us today to arrange a visit to this exceptional property</p>
+                <p class="section-subtitle">Get authentic insights and arrange your private viewing directly</p>
             </div>
 
             <div class="contact-content">
                 <div class="contact-info">
+                    <div class="owner-contact-badge">
+                        <svg class="owner-icon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                            <path d="M20 21v-2a4 4 0 0 0-4-4H8a4 4 0 0 0-4 4v2"></path>
+                            <circle cx="12" cy="7" r="4"></circle>
+                        </svg>
+                        <span>Direct Owner Contact</span>
+                    </div>
+
                     <h3>Contact Information</h3>
                     <div class="contact-details">
                         <div class="contact-item">
@@ -430,13 +479,13 @@
                     </div>
 
                     <div class="contact-cta">
-                        <h4>We Can Help You With:</h4>
+                        <h4>Why Buy Direct?</h4>
                         <ul>
-                            <li>Private property viewings</li>
-                            <li>Detailed property information</li>
-                            <li>Virtual video tours</li>
-                            <li>Purchase assistance</li>
-                            <li>Legal and financial guidance</li>
+                            <li>Save on agent commission fees</li>
+                            <li>Get first-hand property knowledge</li>
+                            <li>Flexible viewing schedules</li>
+                            <li>Direct negotiation & faster decisions</li>
+                            <li>Personal insights about the property & area</li>
                         </ul>
                     </div>
                 </div>
@@ -479,7 +528,7 @@
     <!-- Footer -->
     <footer class="footer">
         <div class="container">
-            <p>&copy; 2024 Colinas Verdes Villa. All rights reserved.</p>
+            <p>&copy; 2025 Colinas Verdes Villa. All rights reserved.</p>
             <p class="footer-ref">Property Reference: CV39</p>
         </div>
     </footer>
