Add new exterior images to gallery in index.html and remove unused minimalist files
- Added two new gallery items: satellite view and property floor plan images.
- Deleted minimalist.css, minimalist.html, and minimalist.js files as they are no longer in use.

--- a/index.html
+++ b/index.html
@@ -311,6 +311,14 @@
                     <img src="images/wood.jpg" alt="Property Features" data-index="32">
                     <div class="gallery-overlay">View Image</div>
                 </div>
+                <div class="gallery-item" data-category="exterior">
+                    <img src="images/satellite-view.jpg" alt="Satellite View of Property" data-index="33">
+                    <div class="gallery-overlay">View Image</div>
+                </div>
+                <div class="gallery-item" data-category="exterior">
+                    <img src="images/floorplan.jpg" alt="Property Floor Plan" data-index="34">
+                    <div class="gallery-overlay">View Image</div>
+                </div>
             </div>
         </div>
     </section>
