Add new features to property listing
- Included a highlight for "Can be Sold Partially Furnished" in the property features section.
- Added "Negotiable price - open to reasonable offers" and "Option to purchase partially furnished" to the benefits list for direct owner sale messaging.

--- a/index.html
+++ b/index.html
@@ -150,6 +150,10 @@
                             <span class="highlight-icon">✓</span>
                             <span>Fully Fenced & Gated</span>
                         </div>
+                        <div class="highlight-item">
+                            <span class="highlight-icon">✓</span>
+                            <span>Can be Sold Partially Furnished</span>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -494,6 +498,8 @@
                             <li>Flexible viewing schedules</li>
                             <li>Direct negotiation & faster decisions</li>
                             <li>Personal insights about the property & area</li>
+                            <li>Negotiable price - open to reasonable offers</li>
+                            <li>Option to purchase partially furnished</li>
                         </ul>
                     </div>
                 </div>
