Update property location details and descriptions in index.html
- Added "Portugal" to the property description and title for clarity.
- Enhanced the overview and location sections with additional context about the Algarve region.
- Updated various mentions of Lagos and the Algarve to include "Portugal" for consistency and improved localization.

--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Luxury 4-bedroom villa with pool in Colinas Verdes, Lagos - €1,095,000. Stunning countryside property with mature gardens, sauna, and gym.">
-    <title>Luxury Villa for Sale - Colinas Verdes, Lagos | €1,045,000</title>
+    <meta name="description" content="Luxury 4-bedroom villa with pool in Colinas Verdes, Lagos, Portugal - €1,045,000. Stunning countryside property with mature gardens, sauna, and gym.">
+    <title>Luxury Villa for Sale - Colinas Verdes, Lagos, Portugal | €1,045,000</title>
     <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css"
           integrity="sha256-p4NxAoJBhIIN+hmNHrzRCf9tD/miZyoHS5obTRR9BMY="
           crossorigin=""/>
@@ -30,7 +30,7 @@
         <div class="hero-overlay"></div>
         <div class="hero-content">
             <h1 class="hero-title">Exquisite Countryside Villa</h1>
-            <p class="hero-subtitle">Colinas Verdes, Lagos</p>
+            <p class="hero-subtitle">Colinas Verdes, Lagos, Portugal</p>
             <div class="hero-price">€1,045,000</div>
             <a href="#overview" class="scroll-indicator">
                 <span></span>
@@ -119,9 +119,9 @@
             </div>
             <div class="overview-content">
                 <div class="overview-text">
-                    <p class="lead">Discover this exceptional T4 villa nestled in the prestigious Colinas Verdes development, offering the perfect blend of countryside tranquility and urban convenience, just 10 minutes from the historic center of Lagos.</p>
+                    <p class="lead">Discover this exceptional T4 villa nestled in the prestigious Colinas Verdes development in Portugal's stunning Algarve region, offering the perfect blend of countryside tranquility and urban convenience, just 10 minutes from the historic center of Lagos.</p>
 
-                    <p>This distinguished property spans over 2,000 square meters of mature landscaped gardens, featuring a south-facing swimming pool, multiple secluded terraces, and a charming fish pond connected by winding pathways. The villa exemplifies refined living with its spacious interiors, characterized by beamed ceilings, premium finishes, and an abundance of natural light.</p>
+                    <p>This distinguished property spans over 2,000 square meters of mature landscaped gardens, featuring a south-facing swimming pool, multiple secluded terraces, and a charming fish pond connected by winding pathways. The villa exemplifies refined Portuguese living with its spacious interiors, characterized by beamed ceilings, premium finishes, and an abundance of natural light.</p>
 
                     <p>Beyond its architectural elegance, this home offers exceptional lifestyle amenities including a private sauna, dedicated gym cabin, and a converted office space with mezzanine—ideal for modern remote working. Energy-efficient solar panels and a B energy rating underscore the property's commitment to sustainable luxury.</p>
 
@@ -428,28 +428,28 @@
             </div>
             <div class="location-content">
                 <div class="location-text">
-                    <h3>Colinas Verdes, Bensafrim, Lagos</h3>
-                    <p>Situated in the sought-after Colinas Verdes development, this property offers the best of both worlds—serene countryside living with immediate access to urban amenities.</p>
+                    <h3>Colinas Verdes, Bensafrim, Lagos, Portugal</h3>
+                    <p>Situated in the sought-after Colinas Verdes development in Portugal's Algarve, this property offers the best of both worlds—serene countryside living with immediate access to urban amenities.</p>
 
                     <div class="location-highlights">
                         <div class="location-item">
                             <strong>Lagos City Center:</strong> 10 minutes
                         </div>
                         <div class="location-item">
-                            <strong>Beaches:</strong> Short drive to pristine Algarve coastline
+                            <strong>Beaches:</strong> Short drive to pristine Portugal's Algarve coastline
                         </div>
                         <div class="location-item">
-                            <strong>Golf Courses:</strong> Multiple championship courses nearby
+                            <strong>Golf Courses:</strong> Multiple championship courses nearby in Portugal
                         </div>
                         <div class="location-item">
-                            <strong>Airport:</strong> Faro International Airport within easy reach
+                            <strong>Airport:</strong> Faro International Airport, Portugal within easy reach
                         </div>
                         <div class="location-item">
                             <strong>Restaurants & Shopping:</strong> Lagos offers excellent dining and retail
                         </div>
                     </div>
 
-                    <p class="location-description">Lagos is one of the Algarve's most historic and charming cities, renowned for its stunning beaches, vibrant marina, excellent restaurants, and rich cultural heritage. The Colinas Verdes area provides a peaceful retreat while maintaining convenient access to all that Lagos has to offer.</p>
+                    <p class="location-description">Lagos is one of Portugal's Algarve region's most historic and charming cities, renowned for its stunning beaches, vibrant marina, excellent restaurants, and rich cultural heritage. The Colinas Verdes area provides a peaceful retreat while maintaining convenient access to all that this beautiful part of Portugal has to offer.</p>
                 </div>
 
                 <div class="location-map">
