Add bedroom4 image to gallery
- Resized bedroom4.jpg from 4032x3024 to 1280x960
- Added bedroom4 to gallery between bedroom3 and bathrooms section
- Updated data-index values for all subsequent gallery items (now 36 total)
- Added bedroom4 alt text to all language translation files
- Rebuilt all language versions with updated gallery

--- a/fr/index.html
+++ b/fr/index.html
@@ -268,76 +268,80 @@
                     <img src="../images/bedroom3.jpg" alt="Chambre 3" data-index="18">
                     <div class="gallery-overlay">Voir l'image</div>
                 </div>
+                <div class="gallery-item" data-category="interior">
+                    <img src="../images/bedroom4.jpg" alt="Bedroom 4" data-index="19">
+                    <div class="gallery-overlay">Voir l'image</div>
+                </div>
 
                 <!-- Interior - Bathrooms -->
                 <div class="gallery-item" data-category="interior">
-                    <img src="../images/bathroom.jpg" alt="Salle de Bain" data-index="19">
+                    <img src="../images/bathroom.jpg" alt="Salle de Bain" data-index="20">
                     <div class="gallery-overlay">Voir l'image</div>
                 </div>
                 <div class="gallery-item" data-category="interior">
-                    <img src="../images/bathroom2.jpg" alt="Salle de Bain Attenante" data-index="20">
+                    <img src="../images/bathroom2.jpg" alt="Salle de Bain Attenante" data-index="21">
                     <div class="gallery-overlay">Voir l'image</div>
                 </div>
 
                 <!-- Additional Spaces -->
                 <div class="gallery-item" data-category="interior">
-                    <img src="../images/office.jpg" alt="Espace Bureau" data-index="21">
+                    <img src="../images/office.jpg" alt="Espace Bureau" data-index="22">
                     <div class="gallery-overlay">Voir l'image</div>
                 </div>
                 <div class="gallery-item" data-category="exterior">
-                    <img src="../images/gym.jpg" alt="Salle de Sport" data-index="22">
+                    <img src="../images/gym.jpg" alt="Salle de Sport" data-index="23">
                     <div class="gallery-overlay">Voir l'image</div>
                 </div>
 
                 <!-- Outdoor Living -->
                 <div class="gallery-item" data-category="exterior">
-                    <img src="../images/outdoor.jpg" alt="Terrasse Extérieure" data-index="23">
+                    <img src="../images/outdoor.jpg" alt="Terrasse Extérieure" data-index="24">
                     <div class="gallery-overlay">Voir l'image</div>
                 </div>
                 <div class="gallery-item" data-category="exterior">
-                    <img src="../images/seating-area.jpg" alt="Coin Salon Extérieur" data-index="24">
+                    <img src="../images/seating-area.jpg" alt="Coin Salon Extérieur" data-index="25">
                     <div class="gallery-overlay">Voir l'image</div>
                 </div>
 
                 <!-- More Garden Views -->
                 <div class="gallery-item" data-category="gardens">
-                    <img src="../images/garden2.jpg" alt="Chemins de Jardin" data-index="25">
+                    <img src="../images/garden2.jpg" alt="Chemins de Jardin" data-index="26">
                     <div class="gallery-overlay">Voir l'image</div>
                 </div>
                 <div class="gallery-item" data-category="gardens">
-                    <img src="../images/garden3.jpg" alt="Caractéristiques du Jardin" data-index="26">
+                    <img src="../images/garden3.jpg" alt="Caractéristiques du Jardin" data-index="27">
                     <div class="gallery-overlay">Voir l'image</div>
                 </div>
                 <div class="gallery-item" data-category="gardens">
-                    <img src="../images/garden5.jpg" alt="Aménagement Paysager Mature" data-index="27">
+                    <img src="../images/garden5.jpg" alt="Aménagement Paysager Mature" data-index="28">
                     <div class="gallery-overlay">Voir l'image</div>
                 </div>
                 <div class="gallery-item" data-category="gardens">
-                    <img src="../images/garden6.jpg" alt="Terrasse Jardin" data-index="28">
+                    <img src="../images/garden6.jpg" alt="Terrasse Jardin" data-index="29">
                     <div class="gallery-overlay">Voir l'image</div>
                 </div>
                 <div class="gallery-item" data-category="gardens">
-                    <img src="../images/garden7.jpg" alt="Vues sur le Jardin" data-index="29">
+                    <img src="../images/garden7.jpg" alt="Vues sur le Jardin" data-index="30">
                     <div class="gallery-overlay">Voir l'image</div>
                 </div>
                 <div class="gallery-item" data-category="gardens">
-                    <img src="../images/garden8.jpg" alt="Terrains du Jardin" data-index="30">
+                    <img src="../images/garden8.jpg" alt="Terrains du Jardin" data-index="31">
                     <div class="gallery-overlay">Voir l'image</div>
                 </div>
                 <div class="gallery-item" data-category="gardens">
-                    <img src="../images/garden9.jpg" alt="Zone du Jardin" data-index="31">
+                    <img src="../images/garden9.jpg" alt="Zone du Jardin" data-index="32">
                     <div class="gallery-overlay">Voir l'image</div>
                 </div>
                 <div class="gallery-item" data-category="exterior">
-                    <img src="../images/wood.jpg" alt="Caractéristiques de la Propriété" data-index="32">
+                    <img src="../images/wood.jpg" alt="Caractéristiques de la Propriété" data-index="33">
                     <div class="gallery-overlay">Voir l'image</div>
                 </div>
                 <div class="gallery-item" data-category="exterior">
-                    <img src="../images/satellite-view.jpg" alt="Vue Satellite de la Propriété" data-index="33">
+                    <img src="../images/satellite-view.jpg" alt="Vue Satellite de la Propriété" data-index="34">
                     <div class="gallery-overlay">Voir l'image</div>
                 </div>
                 <div class="gallery-item" data-category="exterior">
-                    <img src="../images/floorplan.jpg" alt="Plan de la Propriété" data-index="34">
+                    <img src="../images/floorplan.jpg" alt="Plan de la Propriété" data-index="35">
                     <div class="gallery-overlay">Voir l'image</div>
                 </div>
             </div>
