--- a/pt/index.html
+++ b/pt/index.html
@@ -268,76 +268,80 @@
                     <img src="../images/bedroom3.jpg" alt="Quarto 3" data-index="18">
                     <div class="gallery-overlay">Ver Imagem</div>
                 </div>
+                <div class="gallery-item" data-category="interior">
+                    <img src="../images/bedroom4.jpg" alt="Bedroom 4" data-index="19">
+                    <div class="gallery-overlay">Ver Imagem</div>
+                </div>
 
                 <!-- Interior - Bathrooms -->
                 <div class="gallery-item" data-category="interior">
-                    <img src="../images/bathroom.jpg" alt="Casa de Banho" data-index="19">
+                    <img src="../images/bathroom.jpg" alt="Casa de Banho" data-index="20">
                     <div class="gallery-overlay">Ver Imagem</div>
                 </div>
                 <div class="gallery-item" data-category="interior">
-                    <img src="../images/bathroom2.jpg" alt="Casa de Banho da Suíte" data-index="20">
+                    <img src="../images/bathroom2.jpg" alt="Casa de Banho da Suíte" data-index="21">
                     <div class="gallery-overlay">Ver Imagem</div>
                 </div>
 
                 <!-- Additional Spaces -->
                 <div class="gallery-item" data-category="interior">
-                    <img src="../images/office.jpg" alt="Escritório" data-index="21">
+                    <img src="../images/office.jpg" alt="Escritório" data-index="22">
                     <div class="gallery-overlay">Ver Imagem</div>
                 </div>
                 <div class="gallery-item" data-category="exterior">
-                    <img src="../images/gym.jpg" alt="Ginásio" data-index="22">
+                    <img src="../images/gym.jpg" alt="Ginásio" data-index="23">
                     <div class="gallery-overlay">Ver Imagem</div>
                 </div>
 
                 <!-- Outdoor Living -->
                 <div class="gallery-item" data-category="exterior">
-                    <img src="../images/outdoor.jpg" alt="Terraço Exterior" data-index="23">
+                    <img src="../images/outdoor.jpg" alt="Terraço Exterior" data-index="24">
                     <div class="gallery-overlay">Ver Imagem</div>
                 </div>
                 <div class="gallery-item" data-category="exterior">
-                    <img src="../images/seating-area.jpg" alt="Área de Estar Exterior" data-index="24">
+                    <img src="../images/seating-area.jpg" alt="Área de Estar Exterior" data-index="25">
                     <div class="gallery-overlay">Ver Imagem</div>
                 </div>
 
                 <!-- More Garden Views -->
                 <div class="gallery-item" data-category="gardens">
-                    <img src="../images/garden2.jpg" alt="Caminhos do Jardim" data-index="25">
+                    <img src="../images/garden2.jpg" alt="Caminhos do Jardim" data-index="26">
                     <div class="gallery-overlay">Ver Imagem</div>
                 </div>
                 <div class="gallery-item" data-category="gardens">
-                    <img src="../images/garden3.jpg" alt="Características do Jardim" data-index="26">
+                    <img src="../images/garden3.jpg" alt="Características do Jardim" data-index="27">
                     <div class="gallery-overlay">Ver Imagem</div>
                 </div>
                 <div class="gallery-item" data-category="gardens">
-                    <img src="../images/garden5.jpg" alt="Paisagismo Maduro" data-index="27">
+                    <img src="../images/garden5.jpg" alt="Paisagismo Maduro" data-index="28">
                     <div class="gallery-overlay">Ver Imagem</div>
                 </div>
                 <div class="gallery-item" data-category="gardens">
-                    <img src="../images/garden6.jpg" alt="Terraço do Jardim" data-index="28">
+                    <img src="../images/garden6.jpg" alt="Terraço do Jardim" data-index="29">
                     <div class="gallery-overlay">Ver Imagem</div>
                 </div>
                 <div class="gallery-item" data-category="gardens">
-                    <img src="../images/garden7.jpg" alt="Vistas do Jardim" data-index="29">
+                    <img src="../images/garden7.jpg" alt="Vistas do Jardim" data-index="30">
                     <div class="gallery-overlay">Ver Imagem</div>
                 </div>
                 <div class="gallery-item" data-category="gardens">
-                    <img src="../images/garden8.jpg" alt="Terrenos do Jardim" data-index="30">
+                    <img src="../images/garden8.jpg" alt="Terrenos do Jardim" data-index="31">
                     <div class="gallery-overlay">Ver Imagem</div>
                 </div>
                 <div class="gallery-item" data-category="gardens">
-                    <img src="../images/garden9.jpg" alt="Área do Jardim" data-index="31">
+                    <img src="../images/garden9.jpg" alt="Área do Jardim" data-index="32">
                     <div class="gallery-overlay">Ver Imagem</div>
                 </div>
                 <div class="gallery-item" data-category="exterior">
-                    <img src="../images/wood.jpg" alt="Características da Propriedade" data-index="32">
+                    <img src="../images/wood.jpg" alt="Características da Propriedade" data-index="33">
                     <div class="gallery-overlay">Ver Imagem</div>
                 </div>
                 <div class="gallery-item" data-category="exterior">
-                    <img src="../images/satellite-view.jpg" alt="Vista de Satélite da Propriedade" data-index="33">
+                    <img src="../images/satellite-view.jpg" alt="Vista de Satélite da Propriedade" data-index="34">
                     <div class="gallery-overlay">Ver Imagem</div>
                 </div>
                 <div class="gallery-item" data-category="exterior">
-                    <img src="../images/floorplan.jpg" alt="Planta da Propriedade" data-index="34">
+                    <img src="../images/floorplan.jpg" alt="Planta da Propriedade" data-index="35">
                     <div class="gallery-overlay">Ver Imagem</div>
                 </div>
             </div>
