--- a/de/index.html
+++ b/de/index.html
@@ -268,76 +268,80 @@
                     <img src="../images/bedroom3.jpg" alt="Schlafzimmer 3" data-index="18">
                     <div class="gallery-overlay">Bild ansehen</div>
                 </div>
+                <div class="gallery-item" data-category="interior">
+                    <img src="../images/bedroom4.jpg" alt="Bedroom 4" data-index="19">
+                    <div class="gallery-overlay">Bild ansehen</div>
+                </div>
 
                 <!-- Interior - Bathrooms -->
                 <div class="gallery-item" data-category="interior">
-                    <img src="../images/bathroom.jpg" alt="Badezimmer" data-index="19">
+                    <img src="../images/bathroom.jpg" alt="Badezimmer" data-index="20">
                     <div class="gallery-overlay">Bild ansehen</div>
                 </div>
                 <div class="gallery-item" data-category="interior">
-                    <img src="../images/bathroom2.jpg" alt="Badezimmer en Suite" data-index="20">
+                    <img src="../images/bathroom2.jpg" alt="Badezimmer en Suite" data-index="21">
                     <div class="gallery-overlay">Bild ansehen</div>
                 </div>
 
                 <!-- Additional Spaces -->
                 <div class="gallery-item" data-category="interior">
-                    <img src="../images/office.jpg" alt="Büro" data-index="21">
+                    <img src="../images/office.jpg" alt="Büro" data-index="22">
                     <div class="gallery-overlay">Bild ansehen</div>
                 </div>
                 <div class="gallery-item" data-category="exterior">
-                    <img src="../images/gym.jpg" alt="Fitnessraum" data-index="22">
+                    <img src="../images/gym.jpg" alt="Fitnessraum" data-index="23">
                     <div class="gallery-overlay">Bild ansehen</div>
                 </div>
 
                 <!-- Outdoor Living -->
                 <div class="gallery-item" data-category="exterior">
-                    <img src="../images/outdoor.jpg" alt="Außenterrasse" data-index="23">
+                    <img src="../images/outdoor.jpg" alt="Außenterrasse" data-index="24">
                     <div class="gallery-overlay">Bild ansehen</div>
                 </div>
                 <div class="gallery-item" data-category="exterior">
-                    <img src="../images/seating-area.jpg" alt="Sitzbereich im Freien" data-index="24">
+                    <img src="../images/seating-area.jpg" alt="Sitzbereich im Freien" data-index="25">
                     <div class="gallery-overlay">Bild ansehen</div>
                 </div>
 
                 <!-- More Garden Views -->
                 <div class="gallery-item" data-category="gardens">
-                    <img src="../images/garden2.jpg" alt="Gartenwege" data-index="25">
+                    <img src="../images/garden2.jpg" alt="Gartenwege" data-index="26">
                     <div class="gallery-overlay">Bild ansehen</div>
                 </div>
                 <div class="gallery-item" data-category="gardens">
-                    <img src="../images/garden3.jpg" alt="Gartenmerkmale" data-index="26">
+                    <img src="../images/garden3.jpg" alt="Gartenmerkmale" data-index="27">
                     <div class="gallery-overlay">Bild ansehen</div>
                 </div>
                 <div class="gallery-item" data-category="gardens">
-                    <img src="../images/garden5.jpg" alt="Gepflegte Landschaftsgestaltung" data-index="27">
+                    <img src="../images/garden5.jpg" alt="Gepflegte Landschaftsgestaltung" data-index="28">
                     <div class="gallery-overlay">Bild ansehen</div>
                 </div>
                 <div class="gallery-item" data-category="gardens">
-                    <img src="../images/garden6.jpg" alt="Gartenterrasse" data-index="28">
+                    <img src="../images/garden6.jpg" alt="Gartenterrasse" data-index="29">
                     <div class="gallery-overlay">Bild ansehen</div>
                 </div>
                 <div class="gallery-item" data-category="gardens">
-                    <img src="../images/garden7.jpg" alt="Gartenansichten" data-index="29">
+                    <img src="../images/garden7.jpg" alt="Gartenansichten" data-index="30">
                     <div class="gallery-overlay">Bild ansehen</div>
                 </div>
                 <div class="gallery-item" data-category="gardens">
-                    <img src="../images/garden8.jpg" alt="Gartengrundstück" data-index="30">
+                    <img src="../images/garden8.jpg" alt="Gartengrundstück" data-index="31">
                     <div class="gallery-overlay">Bild ansehen</div>
                 </div>
                 <div class="gallery-item" data-category="gardens">
-                    <img src="../images/garden9.jpg" alt="Gartenbereich" data-index="31">
+                    <img src="../images/garden9.jpg" alt="Gartenbereich" data-index="32">
                     <div class="gallery-overlay">Bild ansehen</div>
                 </div>
                 <div class="gallery-item" data-category="exterior">
-                    <img src="../images/wood.jpg" alt="Immobilienmerkmale" data-index="32">
+                    <img src="../images/wood.jpg" alt="Immobilienmerkmale" data-index="33">
                     <div class="gallery-overlay">Bild ansehen</div>
                 </div>
                 <div class="gallery-item" data-category="exterior">
-                    <img src="../images/satellite-view.jpg" alt="Satellitenansicht der Immobilie" data-index="33">
+                    <img src="../images/satellite-view.jpg" alt="Satellitenansicht der Immobilie" data-index="34">
                     <div class="gallery-overlay">Bild ansehen</div>
                 </div>
                 <div class="gallery-item" data-category="exterior">
-                    <img src="../images/floorplan.jpg" alt="Grundriss der Immobilie" data-index="34">
+                    <img src="../images/floorplan.jpg" alt="Grundriss der Immobilie" data-index="35">
                     <div class="gallery-overlay">Bild ansehen</div>
                 </div>
             </div>
